applications/xe-cnf/lib/fluentd_ingress_ilb.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2021 Exium Inc.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fluentd-ilb-gateway
spec:
  selector:
    istio: ilbgateway
  servers:
  - port:
      number: 32400
      name: tcp
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fluentd-ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 32400
      name: tcp
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fluentd-lb-vs
spec:
  hosts:
  - "*"
  gateways:
  - fluentd-ilb-gateway
  - fluentd-ingress-gateway
  tcp:
  - match:
    - port: 32400
    route:
    - destination:
        host: fluentd
        port:
          number: 24224
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fluentd-lb
spec:
  host: fluentd
  trafficPolicy:
    tls:
      mode: DISABLE
---
