applications/xe-cnf/lib/nats_ingress_ilb.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2021 Exium Inc.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nats-ilb-gateway
spec:
  selector:
    istio: ilbgateway
  servers:
  - port:
      number: 32502
      name: tcp
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nats-ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 32502
      name: tcp
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nats-lb-vs
spec:
  hosts:
  - "*"
  gateways:
  - nats-ilb-gateway
  - nats-ingress-gateway
  tcp:
  - match:
    - port: 32502
    route:
    - destination:
        host: nats-client
        port:
          number: 4222
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nats-lb
spec:
  host: nats-client
  trafficPolicy:
    tls:
      mode: DISABLE
---
